# nimrodg-agent

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  3RD-PARTY  CMakeLists.txt  ProtocolChangelog  README.md  auth.md  buildprefix.sh  cibuild.py  cibuild.sh  config.json  default.nix  release.nix  shell.nix
.github/workflows/: build.yml
agent/: CMakeLists.txt  agent.cpp  agent.hpp  agent_common.hpp  agent_fwd.hpp  amqp_consumer.cpp  amqp_consumer.hpp  amqp_exception.cpp  amqp_exception.hpp  config.cpp.in  config.h.in  event.cpp  event.hpp  job_definition.cpp  job_definition.hpp  log.cpp  log.hpp  main.cpp  netthread.cpp  rearmable_event.hpp  settings.cpp  ssl.cpp  transfer.hpp  utils.cpp  utils_posix.cpp  utils_win32.cpp  utils_win32.hpp  uuid.cpp  uuid.hpp
agent/include/: agent.hpp  agent_common.hpp  agent_fwd.hpp  amqp_consumer.hpp  amqp_exception.hpp  config.h.in  event.hpp  job_definition.hpp  log.hpp  rearmable_event.hpp  threading.hpp  transfer.hpp  utils_posix.hpp  utils_win32.hpp  uuid.hpp
agent/include/messages/: base_message.hpp  messages.hpp  netmsg.hpp  netmsg_json.hpp
agent/include/process/: command_result.hpp  procman.hpp
agent/messages/: formatters.cpp  messages.cpp  messages.hpp  netmsg.cpp  netmsg.hpp  netmsg_json.cpp  netmsg_json.hpp
agent/process/: command_result.cpp  command_result.hpp  process.cpp  process.hpp  process_posix.hpp  process_win32.cpp  procman.cpp
agent/src/: agent.cpp  amqp_consumer.cpp  amqp_exception.cpp  config.cpp.in  console.cpp  event.cpp  job_definition.cpp  log.cpp  main.cpp  netthread.cpp  settings.cpp  ssl.cpp  utils.cpp  utils_posix.cpp  utils_win32.cpp  uuid.cpp
agent/src/messages/: formatters.cpp  messages.cpp  netmsg.cpp  netmsg_json.cpp
agent/src/process/: command_result.cpp  process_posix.cpp  process_win32.hpp  procman.cpp
agent/src/transfer/: curl_backend.cpp  curl_backend.hpp  posix_backend.cpp  posix_backend.hpp  transfer_backend.cpp  transfer_backend.hpp  win32_backend.cpp  win32_backend.hpp
agent/transfer/: curl_backend.cpp  curl_backend.hpp  posix_backend.cpp  posix_backend.hpp  transfer_backend.cpp  transfer_backend.hpp  win32_backend.cpp  win32_backend.hpp
cibuild/: armv6-rpi-linux-gnueabi.cmake  armv8-rpi3-linux-gnueabihf.cmake  i686-pc-linux-musl.cmake  x86_64-pc-linux-musl.cmake
cmake/modules/: FindOpenSSL.cmake
libuuid/: CMakeLists.txt
nim1/: CMakeLists.txt  auth_header.cpp  crypto_exception.cpp  evpbuf.cpp  hmacbuf.cpp  lc.cpp  make_view.cpp  nim1.cpp  nim1_ip.hpp  signature.cpp  strbuf.cpp  time.cpp
nim1/include/nim1/: auth_header.hpp  crypto_exception.hpp  evpbuf.hpp  hmacbuf.hpp  lc.hpp  make_view.hpp  nim1.hpp  nim1fwd.hpp  signature.hpp  strbuf.hpp  time.hpp
old/: 0001-Ported-most-of-the-build-system-to-CMake-enough-for-.patch  0002-Updated-CMakeLists.txt-to-include-new-files.patch
uuid/: CMakeLists.txt
uuid/include/uuid/: uuid.h
uuid/src/: gen_uuid.c  uuidP.h  uuid_time.c
